{{$NEXT}}

0.000031  2016-03-20 13:45:43-07:00 America/Los_Angeles

    - Regenerate README files
    - Apply spelling fixes (aquire->acquire) #11
    - Improve error message for missing hubs #12

0.000030  2016-03-15 08:04:21-07:00 America/Los_Angeles

    - Re-Add transition document

0.000029  2016-03-09 10:04:19-08:00 America/Los_Angeles

    - Add pid to Files driver temp dir name

0.000028  2016-03-09 09:03:26-08:00 America/Los_Angeles

    - Environment var to control IPC::Driver::Files temp dir templates

0.000027  2016-03-07 12:16:34-08:00 America/Los_Angeles

    - Ability to disable skip_all subtest abort construct

0.000026  2016-03-06 20:15:19-08:00 America/Los_Angeles

    - Version number in all modules (autarch)
    - Fix rare/minor Race condition in Files IPC driver
    - skip-all plan is not global anymore (never should have been)
    - skip-all properly aborts in child proc/thread
    - don't override defined but falsy pid/rid in traces

0.000025  2016-02-02 12:08:32-08:00 America/Los_Angeles

    - Fix occasional warning in cleanup

0.000024  2016-01-29 21:16:56-08:00 America/Los_Angeles

    - Add no_context() (needed for external tool)

0.000023  2016-01-28 20:34:09-08:00 America/Los_Angeles

    - Add context_do()
    - Add context_aquire hooks
    - Documentation updates
    - Typo fixes (thanks rjbs)
    - Minor enhancement to test tools

0.000022  2016-01-18 11:58:40-08:00 America/Los_Angeles

    - Fix test that broke in the last release (oops)

0.000021  2016-01-18 10:54:54-08:00 America/Los_Angeles

    - Fix bug where default diagnostics were not shown for subtests.

0.000020  2016-01-14 21:52:43-08:00 America/Los_Angeles

    - Change how contexts are stacked
    - More/better messages when contexts are abused
    - better handling of $@, $!, and $?
    - Add pre_filter and pre_unfilter to Hubs

0.000019  2016-01-12 16:08:11-08:00 America/Los_Angeles

    - Make third-party meta-data interface consistent.
